force-app/main/default/objects/LLC_BI__Tier__c/fields/LLC_BI__Deposit_Rate_Structure__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Deposit_Rate_Structure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This optional lookup field references the parent deposit rate structure.</description>
    <label>Deposit Rate Structure</label>
    <referenceTo>LLC_BI__Deposit_Rate_Structure__c</referenceTo>
    <relationshipLabel>Tiers</relationshipLabel>
    <relationshipName>Tiers</relationshipName>
    <type>Lookup</type>
</CustomField>