force-app/main/default/objects/LLC_BI__Tier__c/fields/LLC_BI__Relationship_Grade__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Relationship_Grade__c</fullName>
    <description>This optional picklist associates this deposit rate structure with a particular relationship grade.</description>
    <label>Relationship Grade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>