force-app/main/default/objects/LLC_BI__Tier__c/fields/LLC_BI__Start_Days__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Start_Days__c</fullName>
    <description>This optional number field houses the start date in days for this tier.</description>
    <label>Start Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>