force-app/main/default/objects/LLC_BI__Tier__c/fields/LLC_BI__Tier_Deposit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Tier_Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this lookup field to reference a Deposit record from the Tier object.</description>
    <inlineHelpText>Allows a list of tiers to display on a deposit record.</inlineHelpText>
    <label>Tier Deposit</label>
    <referenceTo>LLC_BI__Deposit__c</referenceTo>
    <relationshipLabel>Deposit Tiers</relationshipLabel>
    <relationshipName>Tiers</relationshipName>
    <type>Lookup</type>
</CustomField>