force-app/main/default/objects/LLC_BI__Tier__c/fields/LLC_BI__Tier_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Tier_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this lookup field with a tier template that works as a unique identifier for the cloned tier in context.</description>
    <inlineHelpText>The system enters a tier template in which the tier in context was cloned</inlineHelpText>
    <label>Tier Template</label>
    <referenceTo>LLC_BI__Tier__c</referenceTo>
    <relationshipLabel>Related Tiers</relationshipLabel>
    <relationshipName>RelatedTiers</relationshipName>
    <type>Lookup</type>
</CustomField>